# digamma

./: CMakeLists.txt
src/: CMakeLists.txt
test/: .gitignore  CMakeLists.txt
